# Master1-DMCOCA

./: .gitignore  CMakeLists.txt  README.md  rapport.md  runner.sh
include/: all.h  options.h
src/: CMakeLists.txt  a.out  main.cpp  options.cpp
